# AndroidUSBCamera

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  dialog_effects.xml  fragment_demo.xml  fragment_demo01.xml  fragment_demo02.xml  fragment_glsurface.xml  fragment_gray_world.xml  layout_item_camera.xml  layout_tip_view.xml  slider_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: default_device_filter.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/res/drawable/: ic_select_default_position.xml
core/src/main/res/layout/: view_logo_root.xml
core/src/main/res/values/: colors.xml  styles.xml
gpu/: build.gradle
gpuImage/: build.gradle
gpuimage/: build.gradle  build.gradle.kts
gpuimage/src/main/cpp/: CMakeLists.txt  yuv-decoder.c
gradle/wrapper/: gradle-wrapper.properties
libausbc/: build.gradle
libausbc/src/main/res/raw/: crop_fragment.glsl  crop_vertex.glsl  effect_brightness_fragment.glsl  effect_contrast_fragment.glsl  effect_gamma_fragment.glsl  effect_hue_fragment.glsl  effect_image_level_fragment.glsl  effect_saturation_fragment.glsl  effect_sharpness_fragment.glsl  sharpness_vertex.glsl  (+1 more)
libnative/: build.gradle
libnative/src/main/cpp/: nativelib.cpp
libuvc/: build.gradle
libuvc/src/main/jni/: Android.mk  Application.mk
libuvc/src/main/jni_uvc/: Application.mk
libuvccamera/: build.gradle
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
(+185 files in other folders)
